2005-07-24  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/view/telnetcon.cpp,
	src/pcmanx_pure_gtk2.cpp,
	src/mainframe.cpp:
	Completely rewrite the multi-threading DNS lookup.
	Remove all implementation based on GThreadPool.
	No more deadlock or strange blocking.
	Use IO channel to monitor socket connection instead of blocking calls.
	Due to better handling of multi-threading, the performance is improved.

	* src/sitepage.cpp:
	Prevent the user from accidentally creating a new favorite item without 
	name or URL.

	* src/appconfig.cpp:
	Fix the problem which previously disable the usage of space character in 
	the names of sites.

2005-07-24  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/core/termdata.cpp:
	Correctly process Esc[A, Esc[B, Esc[C, Esc[D ANSI escape sequence.

	* src/view/telnetview.cpp,
	src/core/site.cpp,
	src/view/telnetcon.cpp:
	Add m_DetectDBChar to let users turn off double-byte detection.

	* src/appconfig.cpp:
	Set file permission of ~/.pcmanx/favorites to 0666 to prevent
	other users from access it.

	* plugin/src/plugin.cpp,
	plugin/src/plugin.h,
	plugin/src/pcmanx_interface.idl:
	Add some experimental code to test xpcom, but the test was failed.

2005-07-24  Jim Huang  <jserv@kaffe.org>

	* src/autologinpage.cpp (CAutoLoginPage::CAutoLoginPage): Fix typo.

	* po/pcmanx.pot,
	po/POTFILES.in,
	po/zh_TW.po: Updated.

2005-07-24  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/appconfig.h,
	src/appconfig.cpp:
	Comment out some unnecessary code.

2005-07-24  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/autologinpage.cpp,
	src/autologinpage.h:
	New files. Add auto-login functionality.

	* src/core/site.cpp,
	src/view/telnetcon.cpp,
	src/sitedlg.cpp: 
	Likewise.
	(CTelnetCon::ConnectThread) : Use select() in place of other blocking
	socket API without timeout.  This cause problems sometimes.

	* src/generalprefpage.cpp,
	src/view/telnetview.cpp,
	src/dialog.cpp:
	Little fix to accept NULL parent window.
